# university-projects

./: README.md
Laboratorio di Intelligenza Artificiale/: README.md
Laboratorio di Intelligenza Artificiale/homework_1/: README  orazio_wrapper.cpp
Laboratorio di Intelligenza Artificiale/homework_4/: README.md
Laboratorio di Intelligenza Artificiale/homework_4/edge_extractor/: package.xml
Laboratorio di Intelligenza Artificiale/homework_6/move_base_client/: CMakeLists.txt
bachelor_degree/Laboratorio di Intelligenza Artificiale/homework_2/: README.md
bachelor_degree/Laboratorio di Intelligenza Artificiale/homework_4/edge_extractor/: CMakeLists.txt
bachelor_degree/Laboratorio di Intelligenza Artificiale/homework_5/: homework_5_generator.ipynb
bachelor_degree/Metodi Quantitativi per l'Informatica/: MobileNetV2CNNComplete.ipynb  PersonalCNNComplete.ipynb  README.md  RelazioneProgetto.docx  SOLOTEST_MobileNetV2CNNComplete.ipynb  SOLOTEST_PersonalCNNComplete.ipynb  infoClassiPerDataset.txt
bachelor_degree/Metodi Quantitativi per l'Informatica/documenti dei test/: MobileNetV2 - Stampe Predizioni 10Poorest.docx  MobileNetV2 - Stampe Predizioni 10Random.docx  TestMobileNet.doc  (+1 more)
bachelor_degree/Sistemi Operativi - Tesi Triennale/: Makefile  README.md
master_degree/Autonomous and Mobile Robotics/: README.md
master_degree/Elective in Artificial Intelligence 2/: README.md
master_degree/Neural Networks/: README.md  pedestrian_activity.ipynb  yolov3_network.ipynb
master_degree/Planning and Reasoning/: HeuristicPlanning.cpp  Makefile  README.md
(+170 files in other folders)
